force-app/main/default/objects/Collections__c/Collections__c.object-meta.xml
<CustomObject>
    <label>Collection</label>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Collections Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>