force-app/main/default/objects/Collections__c/fields/Collection_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Collection_Payment_Amount__c</fullName>
    <label>Net Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>