force-app/main/default/objects/Collections__c/fields/Gross_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gross_Payment_Amount__c</fullName>
    <formula>Collection_Payment_Amount__c * 1.18</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>