force-app/main/default/objects/Collections__c/fields/Payment_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reference_Number__c</fullName>
    <label>Payment Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>