force-app/main/default/objects/Collections__c/fields/Policy_Renewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Policy_Renewed_Date__c</fullName>
    <label>Policy Renewed Date</label>
    <type>Date</type>
</CustomField>