force-app/main/default/objects/Collections__c/fields/Received_From__c.field-meta.xml
<CustomField>
    <fullName>Received_From__c</fullName>
    <formula>Renewal_Request__r.Account.Client_Code__c +&apos;-&apos;+Renewal_Request__r.Account.FirstName+&apos; &apos;+Renewal_Request__r.Account.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Received From</label>
    <type>Text</type>
</CustomField>