force-app/main/default/objects/Collections__c/fields/Renewal_Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Payment_Mode__c</fullName>
    <label>Renewal Payment Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>