force-app/main/default/objects/Collections__c/fields/Renewal_Request__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Request__c</fullName>
    <label>Renewal Request</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Collections</relationshipLabel>
    <relationshipName>Collections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>