force-app/main/default/objects/Collections__c/fields/Renewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Date__c</fullName>
    <formula>Renewal_Request__r.Renewed_Policy__r.Issue_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Renewed Date</label>
    <type>Date</type>
</CustomField>