force-app/main/default/objects/Collections__c/fields/Source_of_Collection__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Collection__c</fullName>
    <label>Source of Collection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>